--- a/_includes/build_status_table.html
+++ b/_includes/build_status_table.html
@@ -20,21 +20,21 @@
   <tr>
     <th></th>
     {% for device_id in device_ids %}
-      <th  style="border-left:2px solid gray" colspan={{ num_table_cols }}>{{device_id}}</th>
+      <th style="border-left:2px solid gray" colspan={{ num_table_cols }}><h4>{{device_id}}</h4></th>
     {% endfor %}
   </tr>
   <tr>
     <td></td>
     {% for device_id in device_ids %}
       {% for col in table_cols %}
-      <td {% if forloop.first %}style="border-left:2px solid gray"{% endif %}>{{ col }}</td>
+      <td {% if forloop.first %}style="border-left:2px solid gray"{% endif %}><h5>{{ col }}</h5></td>
       {% endfor %}
     {% endfor %}
   </tr>
 
   {% for key in keys %}
   <tr>
-    <td><a href="{{ base_url }}/{{ key }}">{{ key }}</a></td>
+    <td><h5><a href="{{ base_url }}/{{ key }}">{{ key }}</a></h5></td>
     {% for device_id in device_ids %}
       {% assign found_post = false %}
 
@@ -59,11 +59,15 @@
 
             {% assign build_url = "." | append: post.url | append: "#build" %}
 
-            {% if post.pending %}<td style="border-left:2px solid gray" class="alert alert-warning">Pending</td>
-            {% elsif post.build_error_count > 0 %}<td style="border-left:2px solid gray" class="alert alert-danger"><a href="{{build_url}}">Errors / Warnings<span class="badge pull-right">{{post.build_error_count}} / {{post.build_warning_count}}</a></td>
-            {% elsif post.build_warning_count > 0 %}<td style="border-left:2px solid gray" class="alert alert-warning"><a href="{{build_url}}">Warnings<span class="badge pull-right">{{post.build_error_count}} / {{post.build_warning_count}}</a></td>
-            {% else %}<td style="border-left:2px solid gray" class="alert alert-success"><a href="{{build_url}}">Succeeded<span class="badge pull-right">{{post.build_error_count}} / {{post.build_warning_count}}</a></td>
+            {% if post.pending %}<td style="border-left:2px solid gray" class="alert alert-warning"><h6>Pending
+            {% elsif post.build_error_count > 0 %}<td style="border-left:2px solid gray" class="alert alert-danger"><h6><a href="{{build_url}}">Errors / Warnings<span class="badge pull-right">{{post.build_error_count}} / {{post.build_warning_count}}</a>
+            {% elsif post.build_warning_count > 0 %}<td style="border-left:2px solid gray" class="alert alert-warning"><h6><a href="{{build_url}}">Warnings<span class="badge pull-right">{{post.build_error_count}} / {{post.build_warning_count}}</a>
+            {% else %}<td style="border-left:2px solid gray" class="alert alert-success"><h6><a href="{{build_url}}">Succeeded<span class="badge pull-right">{{post.build_error_count}} / {{post.build_warning_count}}</a>
             {% endif %}
+            <br/>
+            <small>{{post.date}}<br/>{{ post.commit_sha | truncate: 12 }}</small>
+          </h6>
+          </td>
 
             {% if post.test_count == 0 %}
             {% assign test_percent = 100 %}
@@ -75,20 +79,20 @@
 
             {% assign test_url = "." | append: post.url | append: "#test" %}
 
-            {% if post.pending %}<td class="alert alert-warning">Pending</td>
-            {% elsif post.test_run != true %}<td class="alert alert-danger"><a href="{{test_url}}">Not Run<span class="badge pull-right">NA</span></a></td>
-            {% elsif test_percent >= 99.999 %}<td class="alert alert-success"><a href="{{test_url}}">Success<span class="badge pull-right">{{test_failure_count}}</span></a></td>
-            {% elsif test_percent >= 90 %}<td class="alert alert-warning"><a href="{{test_url}}">Failures<span class="badge pull-right">{{test_failure_count}}</span></a></td>
-            {% else %}<td class="alert alert-danger"><a href="{{test_url}}">Failures<span class="badge pull-right">{{test_failure_count}}</span></a></td>
+            {% if post.pending %}<td class="alert alert-warning"><h6>Pending</h6></td>
+            {% elsif post.test_run != true %}<td class="alert alert-danger"><h6><a href="{{test_url}}">Not Run<span class="badge pull-right">NA</span></h6></a></td>
+            {% elsif test_percent >= 99.999 %}<td class="alert alert-success"><h6><a href="{{test_url}}">Success<span class="badge pull-right">{{test_failure_count}}</span></a></h6></td>
+            {% elsif test_percent >= 90 %}<td class="alert alert-warning"><h6><a href="{{test_url}}">Failures<span class="badge pull-right">{{test_failure_count}}</span></a></h6></td>
+            {% else %}<td class="alert alert-danger"><h6><a href="{{test_url}}">Failures<span class="badge pull-right">{{test_failure_count}}</span></a></h6></td>
             {% endif %}
 
             {% assign package_url = "." | append: post.url | append: "#package" %}
 
             {% if num_table_cols > 2 %}
-              {% if post.pending %}<td class="alert alert-warning">Pending</td>
-              {% elsif post.release_packaged == false or post.package_error_count > 0 %}<td class="alert alert-danger"><a href="{{package_url}}">Errors / Warnings<span class="badge pull-right">{{post.package_error_count}} / {{post.package_warning_count}}</a></td>
-              {% elsif post.package_warning_count > 0 %}<td class="alert alert-warning"><a href="{{package_url}}">Warnings<span class="badge pull-right">{{post.package_error_count}} / {{post.package_warning_count}}</a></td>
-              {% else %}<td class="alert alert-success"><a href="{{package_url}}">Succeeded<span class="badge pull-right">{{post.package_error_count}} / {{post.package_warning_count}}</a></td>
+              {% if post.pending %}<td class="alert alert-warning"><h6>Pending</h6></td>
+              {% elsif post.release_packaged == false or post.package_error_count > 0 %}<td class="alert alert-danger"><h6><a href="{{package_url}}">Errors / Warnings<span class="badge pull-right">{{post.package_error_count}} / {{post.package_warning_count}}</a></h6></td>
+              {% elsif post.package_warning_count > 0 %}<td class="alert alert-warning"><h6><a href="{{package_url}}">Warnings<span class="badge pull-right">{{post.package_error_count}} / {{post.package_warning_count}}</a>i</h6></td>
+              {% else %}<td class="alert alert-success"><h6><a href="{{package_url}}">Succeeded<span class="badge pull-right">{{post.package_error_count}} / {{post.package_warning_count}}</a></h6></td>
               {% endif %}
             {% endif %}
 
@@ -98,7 +102,7 @@
 
       {% if found_post == false %}
         {% for i in (1..num_table_cols) %}
-          <td  {% if forloop.first %}style="border-left:2px solid gray"{% endif %} class="alert alert-info">No Data</td>
+        <td  {% if forloop.first %}style="border-left:2px solid gray"{% endif %} class="alert alert-info"><h6>No Data</h6></td>
         {% endfor %}
       {% endif %}
 
