--- a/_layouts/ci_results.html
+++ b/_layouts/ci_results.html
@@ -16,7 +16,7 @@
 
 
 <ol class="breadcrumb">
-  <li><a href="../index.html">Dashboard</a></li>
+  <li><a href="index.html">Dashboard</a></li>
   <li>Results</li>
 </ol>
 
