--- a/_layouts/ci_results.html
+++ b/_layouts/ci_results.html
@@ -24,6 +24,35 @@
 
 <script type="text/javascript">
 results_data = {{ content | json }}
+function compare_data(a,b) {
+  if (a.messagetype < b.messagetype)
+  {
+    return -1;
+  } else if (a.messagetype > b.messagetype) {
+    return 1;
+  } else {
+    if (a.filename < b.filename) {
+      return -1;
+    } else if (a.filename > b.filename) {
+      return 1;
+    } else {
+      if (a.linenumber < b.linenumber) {
+        return -1;
+      } else if (a.linenumber > b.linenumber) {
+        return 1;
+      } else {
+        if (a.colnumber < b.colnumber) {
+          return -1;
+        } else if (a.colnumber > b.colnumber) { 
+          return 1;
+        } else {
+          return 0;
+        }
+      }
+    }
+  }
+}
+results_data.build_results.sort(compare_data);
 </script>
 
 
@@ -58,7 +87,16 @@ function format_error_rows(data)
   for (var i = 0; i < data.length; ++i) {
     var url = "https://github.com/" + repo + "/blob/" + ref + "/" + data[i].filename + "#L" + data[i].linenumber;
 
-    result += "<tr><td>" + data[i].messagetype + "</td><td><h6><a href='" + url + "'>" + data[i].filename + ":" + data[i].linenumber + ":" + data[i].colnumber + "</a></h6></td><td><code>" + data[i].message.replace(/\n/g, "<br/>") + "</code></td></tr>";
+    var labeltype="info";
+    if (data[i].messagetype.search(/warn/i) != -1)
+    {
+      labeltype = "warning";
+    } else if (data[i].messagetype.search(/err/i) != -1) {
+      labeltype = "danger";
+    }
+
+
+    result += "<tr><td><span class='label label-" + labeltype + "'>" + data[i].messagetype + "</span></td><td><h6><a href='" + url + "'>" + data[i].filename + ":" + data[i].linenumber + ":" + data[i].colnumber + "</a></h6></td><td><code>" + data[i].message.replace(/\n/g, "<br/>") + "</code></td></tr>";
   }
 
   return result;
