--- a/_layouts/ci_results.html
+++ b/_layouts/ci_results.html
@@ -16,7 +16,8 @@
 
 
 <ol class="breadcrumb">
-  <li><a href="index.html">Dashboard</a></li>
+  <li><a href="full_dashboard.html">Full Dashboard</a></li>
+  <li><a href="index.html">Active Dashboard</a></li>
   <li>Results</li>
 </ol>
 
