--- a/_layouts/ci_results.html
+++ b/_layouts/ci_results.html
@@ -63,6 +63,38 @@ results_data.build_results.sort(compare_data);
   {{ page.title }}
 </div>
 
+
+date: {{page.date}}<br/>
+unhandled_failure: {{page.unhandled_failure}}<br/>
+build_error_count: {{page.build_error_count}}<br/>
+build_warning_count: {{page.build_warning_count}}<br/>
+package_error_count: {{page.package_error_count}}<br/>
+package_warning_count: {{page.package_warning_count}}<br/>
+test_count: {{page.test_count}}<br/>
+test_passed_count: {{page.test_passed_count}}<br/>
+repository: {{page.repository}}<br/>
+compiler: {{page.compiler}}<br/>
+compiler_version: {{page.compiler_version}}<br/>
+architecture: {{page.architecture}}<br/>
+os: {{page.os}}<br/>
+os_release: {{page.os_release}}<br/>
+is_release: {{page.is_release}}<br/>
+release_packaged: {{page.release_packaged}}<br/>
+tag_name: <a href="{{base_release_url}}/{{page.tag_name}}">{{page.tag_name}}</a><br/>
+commit_sha: <a href="{{base_commit_url}}/{{page.commit_sha}}">{{page.commit_sha}}</a><br/>
+branch_name: <a href="{{base_branch_url}}/{{page.branch_name}}">{{page.branch_name}}</a><br/>
+test_run: {{page.test_run}}<br/>
+pull_request_issue_id:  <a href="{{base_pull_request_url}}/{{page.pull_request_issue_id}}">{{page.pull_request_issue_id}}</a><br/>
+pull_request_base_repository: {{page.pull_request_base_repository}}<br/>
+pull_request_base_ref: {{page.pull_request_base_ref}}<br/>
+device_id: {{page.device_id}}<br/>
+pending: {{page.pending}}<br/>
+analyze_only: {{page.analyze_only}}<br/>
+build_time: {{page.build_time}}<br/>
+test_time: {{page.test_time}}<br/>
+package_time: {{page.package_time}}<br/>
+<br/>
+
 <a id="build">
   <div class="alert {% if page.build_error_count > 0 %}alert-danger{% elsif page.build_warning_count > 0 %}alert-warning{% else %}alert-success{% endif %}">
     <span class="badge pull-right">{{ page.build_warning_count | plus: page.build_error_count }}</span>
