--- a/_includes/common.html
+++ b/_includes/common.html
@@ -11,5 +11,27 @@
 
 <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 
+<script src="http://mbostock.github.com/d3/d3.v2.js"></script>
+<style>
+/* tell the SVG path to be a thin blue line without any area fill */
+path {
+  stroke: steelblue;
+  stroke-width: 1;
+  fill: none;
+}
+
+.float-bottom {
+  position: absolute;
+  top: 65px;
+}
+.table-box {
+  position: relative;
+  height: 100%;
+  min-width: 80px;
+  min-height: 90px;
+}
+
+
+</style>
 
 
