--- a/_includes/common.html
+++ b/_includes/common.html
@@ -24,6 +24,7 @@ path {
   position: absolute;
   top: 65px;
 }
+
 .table-box {
   position: relative;
   height: 100%;
@@ -31,6 +32,10 @@ path {
   min-height: 90px;
 }
 
+.mouse-over-circle {
+  fill: rgba(255,255,255,0);
+  stroke: none;
+}
 
 </style>
 
