--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,6 +15,7 @@ the "minus: 0" is used to convert the date string into an integer for the > comp
 {% assign base_pull_request_url = "https://github.com/" | append: base_repository | append: "/pull" %}
 {% assign base_release_url = "https://github.com/" | append: base_repository | append: "/releases/tag" %}
 {% assign base_commit_url = "https://github.com/" | append: base_repository | append: "/commit" %}
+{% assign base_compare_url = "https://github.com/" | append: base_repository | append: "/compare" %}
 
 {% assign tag_names_list = "" %}
 {% for p in results_posts %}
