--- a/_layouts/ci_results.html
+++ b/_layouts/ci_results.html
@@ -23,9 +23,21 @@
 
 
 
+
+
 <script type="text/javascript">
-results_data = {{ content | json }}
+results_data = {{ content | json }};
+accordian_group = 0;
 function compare_data(a,b) {
+  if (a.messagetype != b.messagetype)
+  {
+    if (a.messagetype.search(/err/i) != -1) return -1;
+    if (b.messagetype.search(/err/i) != -1) return 1;
+
+    if (a.messagetype.search(/warn/i) != -1) return -1;
+    if (b.messagetype.search(/warn/i) != -1) return 1;
+  }
+
   if (a.messagetype < b.messagetype)
   {
     return -1;
@@ -53,7 +65,42 @@ function compare_data(a,b) {
     }
   }
 }
+
+function compare_test_data(a,b) {
+  if (a.status != b.status)
+  {
+    if (a.status.search(/fail/i) != -1) return -1;
+    if (b.status.search(/fail/i) != -1) return 1;
+
+    if (a.status.search(/warn/i) != -1) return -1;
+    if (b.status.search(/warn/i) != -1) return 1;
+  }
+
+  if (a.status < b.status)
+  {
+    return -1;
+  } else if (a.status > b.status) {
+    return 1;
+  } else {
+    if (a.name < b.name) {
+      return -1;
+    } else if (a.name > b.name) {
+      return 1;
+    } else {
+      if (a.time < b.time) {
+        return -1;
+      } else if (a.time > b.time) {
+        return 1;
+      } else {
+        return 0;
+      }
+    }
+  }
+}
+
+
 results_data.build_results.sort(compare_data);
+results_data.test_results.sort(compare_test_data);
 </script>
 
 
@@ -96,15 +143,12 @@ package_time: {{page.package_time}}<br/>
 <br/>
 
 <a id="build">
-  <div class="alert {% if page.build_error_count > 0 %}alert-danger{% elsif page.build_warning_count > 0 %}alert-warning{% else %}alert-success{% endif %}">
-    <span class="badge pull-right">{{ page.build_warning_count | plus: page.build_error_count }}</span>
-    <big>Build Messages (time: {{ page.build_time }}s)</big>
+  <div class="page-header">
+    <h1>Build Messages (time: {{ page.build_time }}s)</h1>
   </div>
 </a>
 
 
-<table class="table table-striped">
-  <th><td>location</td><td>message</td></th>
 
 <script type="text/javascript">
 var repo = "{{ page.repository }}"
@@ -131,14 +175,55 @@ function get_label_type(stat)
 
 function format_error_rows(data)
 {
+  if (data.length == 0) return "";
+
   var result = "";
+  var last_message_type = "";
+  ++accordian_group;
+  result = " <div class='panel-group' id='accordion-"+accordian_group+"'> ";
+
+  var count = 0;
   for (var i = 0; i < data.length; ++i) {
     var url = "https://github.com/" + repo + "/blob/" + ref + "/" + data[i].filename + "#L" + data[i].linenumber;
 
     var labeltype = get_label_type(data[i].messagetype);
 
+    if (data[i].messagetype != last_message_type) {
+      var messagecount = 0;
+      for (var j = i; j < data.length && data[j].messagetype == data[i].messagetype; ++j) {
+        ++messagecount;
+      }
+
+      if (last_message_type != "") {
+        // close last block
+        result += "</table></div></div></div>";
+      }
+      result += " \
+  <div class='panel panel-" + labeltype + "'> \
+    <div class='panel-heading'> \
+      <span class='badge pull-right'>" + messagecount + "</span> \
+      <h4 class='panel-title'> \
+        <a data-toggle='collapse' data-parent='#accordion-"+accordian_group+"' href='#collapse-" + accordian_group + "-" + i + "'> " +
+          data[i].messagetype + " messages \
+        </a> \
+      </h4> \
+    </div> \
+    <div id='collapse-" + accordian_group + "-" + i +"' class='panel-collapse collapse'> \
+      <div class='panel-body'> \
+<table class='table table-striped'> \
+  <th><td>location</td><td>message</td></th>";
+
+      last_message_type = data[i].messagetype;
+      count = 0;
+    }
+    ++count;
+
+
     result += "<tr><td><span class='label label-" + labeltype + "'>" + data[i].messagetype + "</span></td><td><h6><a href='" + url + "'>" + data[i].filename + ":" + data[i].linenumber + ":" + data[i].colnumber + "</a></h6></td><td><code>" + data[i].message.replace(/\n/g, "<br/>") + "</code></td></tr>";
   }
+
+  result += "</table></div></div></div></div>";
+
 
   return result;
 }
@@ -148,7 +233,6 @@ document.writeln(format_error_rows(results_data.build_results));
 
 </script>
 
-</table>
 
 
 {% if page.test_count == 0 %}
@@ -170,9 +254,8 @@ document.writeln(format_error_rows(results_data.build_results));
 {% endif %}
 
 <a id="test">
-  <div class="alert {{alert_class}}">
-    <span class="badge pull-right">{{test_failure_count}}</span>
-    <big>Test Results (time: {{ page.test_time }}s)</big>
+  <div class="page-header">
+    <h1>Test Results (time: {{ page.test_time }}s)</h1>
     {% if  page.test_run == false %}
     <br/><small>Not Run</small>
     {% endif %}
@@ -180,28 +263,75 @@ document.writeln(format_error_rows(results_data.build_results));
 </a>
 
 
-<table class="table table-striped">
-  <th><td>name</td><td>time</td></th>
-
 <script type="text/javascript">
-for (var i = 0; i < results_data.test_results.length; ++i) {
-  var labeltype = get_label_type(results_data.test_results[i].status);
-  document.writeln("<tr><td><span class='label label-" + labeltype + "'>" + results_data.test_results[i].status + "</span></td><td>" + results_data.test_results[i].name + "</td><td>" + results_data.test_results[i].time + "</td></tr>");
-  if (results_data.test_results[i].status == "failed" && results_data.test_results[i].output) {
-    document.writeln("<tr><td></td><td colspan=2><table  class='table table-striped'>");
-    document.writeln("<tr><td colspan=3>"+results_data.test_results[i].output.replace(/\n/g, "<br/>")+"</td></tr>");
-    if (results_data.test_results[i].parsed_errors) {
-      document.writeln(format_error_rows(results_data.test_results[i].parsed_errors));
+
+function format_test_rows(data)
+{
+  if (data.length == 0) return "";
+
+  var result = "";
+  var last_message_type = "";
+  ++accordian_group;
+  result = " <div class='panel-group' id='accordion-"+accordian_group+"'> ";
+
+  var count = 0;
+  for (var i = 0; i < data.length; ++i) {
+    var labeltype = get_label_type(data[i].status);
+
+    if (data[i].status != last_message_type) {
+      var messagecount = 0;
+      for (var j = i; j < data.length && data[j].status == data[i].status; ++j) {
+        ++messagecount;
+      }
+
+      if (last_message_type != "") {
+        // close last block
+        result += "</table></div></div></div>";
+      }
+      result += " \
+  <div class='panel panel-" + labeltype + "'> \
+    <div class='panel-heading'> \
+      <h4 class='panel-title'> \
+        <span class='badge pull-right'>" + messagecount + "</span> \
+        <a data-toggle='collapse' data-parent='#accordion-"+accordian_group+"' href='#collapse-" + accordian_group + "-" + i + "'> " +
+          data[i].status + " \
+        </a> \
+      </h4> \
+    </div> \
+    <div id='collapse-" + accordian_group + "-" + i + "' class='panel-collapse collapse'> \
+      <div class='panel-body'> \
+<table class='table table-striped'> \
+  <th><td>name</td><td>time</td></th>";
+
+      last_message_type = data[i].status;
+      count = 0;
     }
-    document.writeln("</table></td></tr>");
-  } 
+    ++count;
+
+    result += "<tr><td><span class='label label-" + labeltype + "'>" + data[i].status + "</span></td><td>" + data[i].name + "</td><td>" + data[i].time + "</td></tr>";
+    if (data[i].status == "failed" && data[i].output) {
+      result += "<tr><td></td><td colspan=2>";
+      result += data[i].output.replace(/\n/g, "<br/>");
+      if (data[i].parsed_errors) {
+        result += format_error_rows(data[i].parsed_errors);
+      }
+      result += "</td></tr>";
+    } 
+  }
+
+  result += "</table></div></div></div></div>";
 
 
+  return result;
 }
+
+
+
+document.writeln(format_test_rows(results_data.test_results));
 
 </script>
 
-</table>
+
 
 {% if page.is_release %}
 
